Co-authored-by: Eugenio Cartagena <euggnio@users.noreply.github.com>

--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao-servidor/detalhes-solicitacao-servidor.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao-servidor/detalhes-solicitacao-servidor.component.scss
@@ -80,8 +80,12 @@
   margin-top: 10px;
 }
 
+.emAndamento{
+  color: #5699ea;
+}
+
 .etapaDeferido{
-  color: #6de78154;
+  color: #2B923C;
 }
 
 .etapaIndeferido{
@@ -114,14 +118,6 @@ span {
 .buttonFechar{
   display: flex;
   flex-direction: row-reverse;
-  padding: 16px;
-
-}
-
-.buttonSolicitar{
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: flex-start;
   padding: 16px;
 
 }
