--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/lista-solicitacoes-servidor/lista-solicitacoes-servidor.component.scss
@@ -145,3 +145,9 @@
   opacity: 0.5;
   pointer-events: none;
 }
+
+.pagination button.next.disabled {
+  background-color: #ccc;
+  color: white;
+  cursor: not-allowed;
+}
