--- a/devII/src/app/modules/aluno/solicitacoes-aluno/tela-solicitacao/tela-solicitacao.component.scss
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/tela-solicitacao/tela-solicitacao.component.scss
@@ -1,116 +1,43 @@
-.titulo {
-  padding: 1em;
-  display: flex;
-  justify-content: center;
+.corpo {
+  padding: 30px;
 
-  p {
-      font-weight: 700;
-      font-size: 3px;
+  &-titulo {
+    display: flex;
+    justify-content: center;
+    font-size: 30px;
+
+    p {
+      font-weight: 600;
+      font-size: 30px;
       border-bottom: 4px solid #2b923c;
       padding-bottom: 8px;
+    }
+  }
+  &-formulario {
+    padding-top: 30px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    .forms {
+      flex-direction: column;
+      .tipo {
+        margin-right: 15px;
+        font-size: 20px;
+      }
+      select {
+        height: 25px;
+        font-size: 18px;
+        option {
+          font-size: 18px;
+          align-items: center;
+        }
+      }
+      .name {
+        height: 25px;
+        font-size: 20px;
+      }
+      
+    }
   }
 }
-
-.formulario {
-display: flex;
-width: 50%;
-
-margin-left: 5%;
-justify-content: center;
-flex-direction: column;
-}
-
-.aviso{
-  position: absolute;
-  border: 0.1px solid black;
-  margin: 20%;
-  width: 50%;
-  height: 50%;
-  background-color: #FFFFFF;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  -webkit-box-shadow: 10px 10px 24px -8px rgba(0,0,0,0.75);
-  -moz-box-shadow: 10px 10px 24px -8px rgba(0,0,0,0.75);
-  box-shadow: 10px 10px 24px -8px rgba(0,0,0,0.75);
-  overflow: scroll;
-}
-
-.avisoFundo{
-  position: absolute;
-  background-color: rgba(128, 128, 128, 0.65);
-  width: 100%;
-
-  height: 100%;
-}
-
-.tAviso{
-  font-size: 3em;
-  color: red;
-}
-
-
-
-label{
-font-size: 20px;
-font-style: normal;
-width: 530px;
-height: 28px;
-}
-
-input,select {
-background: #FFFFFF;
-border: 1px solid #000000;
-border-radius: 5px;
-margin-bottom: 30px;
-padding: 7px;
-font-size: 18px;
-
-}
-
-.matricula, .ano{
-  width: 90%;
-}
-
-.container{
-  display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    align-items: baseline;
-}
-.row{
-
-  width: 50%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-
-
-
-.formularioBox{
-display: flex;
-flex-direction: column;
-}
-
-
-.botao{
-border: 0px solid #000000;
-background: #2F9E41;
-font-style: normal;
-font-size: 25px;
-color: #FFFFFF;
-cursor: pointer;
-}
-
-.botaov{
-  border: 0px solid #000000;
-  background: red;
-  font-style: normal;
-  font-size: 25px;
-  color: #FFFFFF;
-  cursor: pointer;
-  }
