--- a/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/aluno/solicitacoes-aluno/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -1,67 +1,86 @@
 <div class="espacamento">
-  <div class="card">
-   <div class="header">
+  <div class="header">
     <div class="titulo">
-      <span>{{solicitacao.titulo}}</span>
+      <span>Solicitação de: {{ solicitacao.titulo }}</span>
       <span class="cardDecoracao"></span>
-     </div>
-
-      <div>
-        <span>Status</span>
-        <span class="retanguloStatus" [ngClass]="statusSolicitacao()">{{solicitacao.status}}</span>
-      </div>
-   </div>
-
-   <div class="fluxo">
-
-      <div class="step">
-        <div class="circle" [ngClass]="progressoFluxo(1)">1</div>
-        <span>Envio de documentos</span>
-      </div>
-
-      <span class="retanguloFluxo"></span>
-
-      <div class="step">
-        <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
-        <span>Análise setor de estágio</span>
-      </div>
-
-      <span class="retanguloFluxo"></span>
-
-      <div class="step">
-        <div class="circle" [ngClass]="progressoFluxo(3)">3</div>
-        <span>Assinatura Coordenador de curso</span>
-      </div>
-
-      <span class="retanguloFluxo"></span>
-
-      <div class="step">
-        <div class="circle" [ngClass]="progressoFluxo(4)">4</div>
-        <span>Assinatura reitor</span>
-      </div>
-
-      <span class="retanguloFluxo"></span>
-
-      <div class="step">
-        <div class="circle" [ngClass]="progressoFluxo(5)">5</div>
-        <span>Processo de assinatura Finalizado</span>
-      </div>
-
-   </div>
-
-   <div class="cardConteudo">
-    <span>{{solicitacao.conteudo}}</span>
-   </div>
-
-   <div *ngIf="solicitacao.observacao !== undefined && solicitacao.observacao !== null">
-    <div class="observacao">
-        <p><b>Observação:</b> {{solicitacao.observacao}}</p>
     </div>
-   </div>
 
-   <div class="buttonFechar">
-    <button (click)="closeDialog()">Fechar</button>
-   </div>
-
+    <div>
+      <span>Status</span>
+      <span class="retanguloStatus" [ngClass]="statusSolicitacao()">{{ solicitacao.status }}</span>
+    </div>
   </div>
+
+  <div class="fluxo">
+    <div class="step">
+      <div class="circle" [ngClass]="progressoFluxo(1)">1</div>
+      <span>Envio de documentos</span>
+    </div>
+
+    <span class="retanguloFluxo"></span>
+    <div class="step">
+      <div class="circle" [ngClass]="progressoFluxo(2)">2</div>
+      <div class="etapa">
+        <span class="emAndamento" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa > 2">*Deferido*</span>
+
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[0].etapa == 2 && solicitacao.etapa == 2 && solicitacao.status === 'Indeferido'">*Indeferido*</span>
+      </div>
+      <span>Análise setor de estágio</span>
+    </div>
+    <span class="retanguloFluxo"></span>
+    <div class="step">
+      <div class="circle" [ngClass]="progressoFluxo(3)">3</div>
+      <div class="etapa">
+        <span class="emAndamento" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa > 3">*Deferido*</span>
+
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[1].etapa == 3 && solicitacao.etapa == 3 && solicitacao.historico[1].status === 'Indeferido'">*Indeferido*</span>
+      </div>
+      <span>Assinatura Coordenador de curso</span>
+    </div>
+
+    <span class="retanguloFluxo"></span>
+    <div class="step">
+      <div class="circle" [ngClass]="progressoFluxo(4)">4</div>
+      <div class="etapa">
+        <span class="emAndamento" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+
+        <span class="etapaDeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa > 4">*Deferido*</span>
+
+        <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.historico[2].status === 'Indeferido'">*Indeferido*</span>
+      </div>
+      <span>Assinatura reitor</span>
+    </div>
+
+    <span class="retanguloFluxo"></span>
+    <div class="step">
+      <div class="circle" [ngClass]="progressoFluxo(5)">5</div>
+      <div class="etapa">
+        <span class="emAndamento" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.status !== 'Indeferido'">*Em Análise*</span>
+
+          <span class="etapaDeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa > 5">*Deferido*</span>
+
+          <span class="etapaIndeferido" *ngIf="solicitacao.historico[3].etapa == 5 && solicitacao.etapa == 5 && solicitacao.historico[3].status === 'Indeferido'">*Indeferido*</span>
+      </div>
+      <span>Processo de assinatura Finalizado</span>
+    </div>
+  </div>
+
+  <div class="cardConteudo">
+    <span>{{ solicitacao.conteudo }}</span>
+  </div>
+
+  <div *ngIf="solicitacao.observacao !== undefined && solicitacao.observacao !== null">
+    <div class="observacao">
+      <p><b>Observação:</b> {{ solicitacao.observacao }}</p>
+    </div>
+  </div>
+
+  <div class="buttonFechar">
+    <button (click)="closeDialog()">Fechar</button>
+  </div>
+
 </div>
