--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.scss
@@ -76,6 +76,22 @@
   font-size: 25px;
 }
 
+.etapa{
+  margin-top: 10px;
+}
+
+.emAndamento{
+  color: #5699ea;
+}
+
+.etapaDeferido{
+  color: #2B923C;
+}
+
+.etapaIndeferido{
+  color: #CB0606;
+}
+
 .progressoEtapa{
   background-color: #6de78154;
 }
