Filtro Pendentes e Ajustes

--- a/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
+++ b/devII/src/app/modules/servidor/detalhes-solicitacao-estagio/detalhes-solicitacao/detalhes-solicitacao.component.html
@@ -52,7 +52,7 @@
 
         <span class="etapaIndeferido" *ngIf="solicitacao.historico[2].etapa == 4 && solicitacao.etapa == 4 && solicitacao.historico[2].status.toLowerCase() === 'indeferido'">*Indeferido*</span>
       </div>
-      <span>Assinatura reitor</span>
+      <span>Assinatura do Diretor</span>
     </div>
 
     <span class="retanguloFluxo"></span>
